--- a/src/styles/orbits.css
+++ b/src/styles/orbits.css
@@ -1,3 +1,10 @@
 body {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
   background-color: #535353;
+  color: white;
 }
